# Hackathon-Starter-Kit-Back

./: CONTRIBUTING.md  README.md  pyproject.toml
app/: config.py  main.py  requirements-dev.txt  requirements.txt
app/data/group/controllers/: __init__.py  group_controller.py
app/data/group/models/: __init__.py  group_model.py
app/data/group/schemas/: __init__.py  group_schema.py
app/data/group/services/: __init__.py  group_service.py
app/data/position/enums/: __init__.py  position_enum.py
app/data/position/models/: __init__.py  position_model.py
app/data/position/schemas/: __init__.py  position_schema.py
app/data/position/services/: __init__.py  position_service.py
app/data/trader/controllers/: __init__.py  trader_controller.py
app/data/trader/models/: __init__.py  trader_model.py  trader_position_model.py
app/data/trader/schemas/: __init__.py  trader_position_schema.py  trader_schema.py
app/data/trader/services/: __init__.py  trader_service.py
app/data/user/controllers/: user_controller.py
app/data/user/models/: user_model.py
app/data/user/schemas/: __init__.py  user_schema.py
app/data/user/services/: __init__.py  user_service.py
app/manager/scraper/: __init__.py  scraper_manager.py
app/manager/trade/: trade_manager.py
app/shared/: __init__.py
envs/dev/: docker-compose.yml
envs/dev/back/: .env.example  Dockerfile
envs/prod/back/: .env.example
